crates/ui/tests/snapshots/resolve_layout_snapshot__generate_layout.snap
---
source: crates/ui/tests/resolve_layout_snapshot.rs
expression: resolved
---
ResolvedLayout {
    left_dock: [],
    right_dock: [
        PanelId(
            "prompt",
        ),
        PanelId(
            "generate-codex-context",
        ),
        PanelId(
            "recipe",
        ),
        PanelId(
            "structure",
        ),
        PanelId(
            "style",
        ),
        PanelId(
            "palette-behavior",
        ),
        PanelId(
            "advanced-settings",
        ),
    ],
    bottom_tray: [
        PanelId(
            "results",
        ),
        PanelId(
            "timeline",
        ),
        PanelId(
            "history",
        ),
        PanelId(
            "console",
        ),
    ],
    center: Canvas,
    primary_tools: [
        ToolId(
            "hand",
        ),
        ToolId(
            "zoom",
        ),
        ToolId(
            "selection",
        ),
        ToolId(
            "ai_brush",
        ),
    ],
    default_tool: ToolId(
        "hand",
    ),
    status_items: [
        StatusItem {
            icon: '\u{e18a}',
            text: "AI Ready",
        },
        StatusItem {
            icon: '\u{e18a}',
            text: "Seed 123456",
        },
    ],
}
