crates/ui/tests/snapshots/resolve_layout_snapshot__tiles_layout.snap
---
source: crates/ui/tests/resolve_layout_snapshot.rs
expression: resolved
---
ResolvedLayout {
    left_dock: [],
    right_dock: [
        PanelId(
            "tileset",
        ),
        PanelId(
            "rule-type",
        ),
        PanelId(
            "material",
        ),
        PanelId(
            "seam-qa",
        ),
        PanelId(
            "ai-tile-assistant",
        ),
    ],
    bottom_tray: [
        PanelId(
            "tile-variants",
        ),
        PanelId(
            "assets",
        ),
        PanelId(
            "console",
        ),
    ],
    center: Canvas,
    primary_tools: [
        ToolId(
            "pencil",
        ),
        ToolId(
            "eraser",
        ),
        ToolId(
            "fill",
        ),
        ToolId(
            "line",
        ),
        ToolId(
            "rectangle",
        ),
        ToolId(
            "ellipse",
        ),
        ToolId(
            "eyedropper",
        ),
        ToolId(
            "selection",
        ),
        ToolId(
            "lasso",
        ),
        ToolId(
            "move",
        ),
        ToolId(
            "transform",
        ),
        ToolId(
            "text",
        ),
        ToolId(
            "hand",
        ),
        ToolId(
            "zoom",
        ),
        ToolId(
            "ai_brush",
        ),
    ],
    default_tool: ToolId(
        "pencil",
    ),
    status_items: [
        StatusItem {
            icon: '\u{e296}',
            label: Data(
                "Tile 16px",
            ),
        },
        StatusItem {
            icon: '\u{e184}',
            label: Key {
                key: MsgKey(
                    "workspace.tiles.status.seams_ok",
                ),
                args: [],
            },
        },
    ],
}
